nginx-exercice-4/prerequis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-daemonset
spec:
  # À compléter dans la console : définir le selector et les ports
  selector:
    app: nginx-daemonset
  ports:
    - port: 8080
